--- a/package.json
+++ b/package.json
@@ -2,32 +2,49 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Backend do site Passa Bola",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Projeto-Passa-a-Bola/backend.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "nodejs",
+    "express",
+    "mongodb",
+    "jwt",
+    "api",
+    "futebol",
+    "feminino"
+  ],
+  "author": "Equipe Passa Bola",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Projeto-Passa-a-Bola/backend/issues"
   },
   "homepage": "https://github.com/Projeto-Passa-a-Bola/backend#readme",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.19.0",
-    "mongoose": "^8.18.1"
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.0.1",
+    "eslint": "^8.48.0",
+    "jest": "^29.6.4",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
