--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "lint": "eslint src/",
-    "lint:fix": "eslint src/ --fix"
+    "lint:fix": "eslint src/ --fix",
+    "criar-admin": "node scripts/criar-admin.js"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,9 @@
   },
   "homepage": "https://github.com/Projeto-Passa-a-Bola/backend#readme",
   "dependencies": {
+    "axios": "^1.12.1",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -38,9 +41,9 @@
     "mongoose": "^7.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "eslint": "^8.48.0",
     "jest": "^29.6.4",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   },
   "engines": {
